[gd_scene load_steps=3 format=3 uid="uid://cxj0d4hcuiwpi"]

[ext_resource type="Script" path="res://animal_quiz.gd" id="1_hfbcy"]
[ext_resource type="Texture2D" uid="uid://dkvc0rs5t1oiy" path="res://creatures/gila monster.jpg" id="2_4i8mq"]

[node name="AnimalQuiz" type="AcceptDialog"]
title = "Pop Quiz"
initial_position = 2
size = Vector2i(500, 357)
visible = true
script = ExtResource("1_hfbcy")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4i8mq")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(450, 300)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -242.0
offset_top = -170.5
offset_right = 242.0
offset_bottom = 129.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(450, 300)
layout_mode = 2

[node name="LabelQuestion" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="choiceContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Button1" type="Button" parent="MarginContainer/VBoxContainer/choiceContainer"]
layout_mode = 2
text = "a"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/choiceContainer"]
layout_mode = 2
text = "b"

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer/choiceContainer"]
layout_mode = 2
text = "c"

[node name="Button4" type="Button" parent="MarginContainer/VBoxContainer/choiceContainer"]
layout_mode = 2
text = "d"

[node name="LabelFeedback" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
